# marketmind.site

./: .demo-token  .dockerignore  .env.example  .env.live.example  .env.production.example  .env.sbx.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPROVAL_POLICY.md  ARCHITECTURE.md  AUDIT_FIXES_SUMMARY.md  BUILD10_FINAL_LAUNCH_APPROVAL.md  BUILD4_FIXES_COMPLETE.md  BUILD9_LAUNCH_READY_FINAL.md  CHANGELOG.md  CODEX_HANDOFF.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_RULES.md  Dockerfile  FINAL_LAUNCH_GATE_SIGNOFF.md  FINAL_LAUNCH_GATE_VERIFICATION.md  HOWTO_APPLY.md  ISSUES.md  LAUNCH_AUDIT_COMPLETE.md  Makefile  ONCALL.md  OPERATING_INDEX.md  OWNER_MANUAL.md  PNL_MODEL.md  PRIVACY.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_LAUNCH_STATUS.md  PROJECT_BRIEF.md  README.md  RUNBOOK.md  SLICE_WORKFLOW.md  TERMS.md  TEST_PLAN.md  (+22 more)
alembic/: env.py  env_utils.py
apps/: __init__.py
config/: __init__.py  ebay_config.py
dashboard/: app.py
desktop/: .gitignore  index.html  package-lock.json  package.json
docs/: API_KEYS_AND_CREDENTIALS.md  CLIENTS_OWNER_GUIDE.md  COMMAND_CENTER_CHANGELOG.md  COMMAND_CENTER_GUIDE.md  DASHBOARD_PLAN.md  DEPLOYMENT.md  GO_NO_GO.md  GO_NO_GO_CHECKLIST.md  LIVE_TESTING_GUIDE.md  MASTER_DEV_PLAN_PROFIT_SAFE.md  MASTER_DEV_PLAN_PROFIT_SAFE_HARDENED.md  NEXT_CODEX_TASK.md  ONCALL.md  PHASES_STATUS.md  POST_LAUNCH_SMOKE.md  PRIVACY_POLICY.md  PROFIT_SYSTEM_BACKTEST_REPORT.md  RELEASE_PROCESS.md  RISK_REGISTER.md  RUNBOOK.md  TERMS_OF_SERVICE.md  credentials_followup.md  ebay_integration.md  env_vars.md  glossary.md  marketmind-scheduler.service  model_mapping.md  phase10_dashboards.md  phase10_test_report.md  phase11_compliance.md  phase12_marketing.md  phase13_finance.md  phase14_experiments.md  phase14_final_verification.md  phase15_learning.md  (+18 more)
(+493 files in other folders)
