[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind-autopilot"
version = "0.2.0"
description = "Human-in-the-loop commerce operator engine for product economics, scoring, approvals, and experiment control."
requires-python = ">=3.10"
authors = [{ name = "AidanDCM" }]
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]
dashboard = ["streamlit>=1.34"]

[project.scripts]
marketmind = "marketmind.cli:main"
marketmind-scheduler = "marketmind.scheduler:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["."]
include = ["marketmind*", "dashboard*"]
